# rust-fake-enum

./: .gitignore  Cargo.toml  Makefile.in
src/: lib.rs
