[package]
name = "fake-enum"
version = "0.1.3"
authors = ["Connor <chorman64@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT AND Apache-2.0"
repository = "https://github.com/chorman0773/rust-fake-enum"
description = """
    A rust crate for creating FFI safe "fake" enum types
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
